--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script3.js"></script>
 </body>
 </html>
